<resources>
    <string name="app_name">Hesap Makinesi</string>
    <string name="sifir">0</string>
    <string name="bir">1</string>
    <string name="iki">2</string>
    <string name="uc">3</string>
    <string name="dort">4</string>
    <string name="bes">5</string>
    <string name="alti">6</string>
    <string name="yedi">7</string>
    <string name="sekiz">8</string>
    <string name="dokuz">9</string>
    <string name="arti">+</string>
    <string name="eksi">-</string>
    <string name="carpi">*</string>
    <string name="bolu">/</string>
    <string name="Hesapla">Hesapla</string>
    <string name="sil">C</string>
    <string name="factoriyel">Fact</string>
    <string name="Usalma">üst</string>
    <string name="Mod">Mod</string>
</resources>
