<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.lenovo.hesap_makinesi.MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="118dp"
        tools:layout_editor_absoluteX="42dp"
        android:text="@string/bir"
        android:layout_alignStart="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignBaseline="@+id/button3"
        android:id="@+id/button2"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="319dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:ems="10"
        android:hint="Sayi giriniz"
        android:inputType="number"
        android:text=""
        android:textSize="22dp"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="118dp"
        tools:layout_editor_absoluteX="148dp"
        android:text="@string/iki"
        android:layout_alignStart="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignBaseline="@+id/button4"
        android:id="@+id/button3"
        tools:ignore="RtlHardcoded" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="118dp"
        tools:layout_editor_absoluteX="252dp"
        android:text="@string/uc"
        android:layout_alignStart="@+id/button7"
        android:id="@+id/button4"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/button7"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="180dp"
        tools:layout_editor_absoluteX="42dp"
        android:text="@string/dort"
        android:layout_alignStart="@+id/button8"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignBaseline="@+id/button6"
        android:id="@+id/button5"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="180dp"
        tools:layout_editor_absoluteX="148dp"
        android:text="@string/bes"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignBaseline="@+id/button7"
        android:id="@+id/button6"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="180dp"
        tools:layout_editor_absoluteX="252dp"
        android:text="@string/alti"
        android:layout_alignStart="@+id/button10"
        android:id="@+id/button7"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/button10"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="245dp"
        tools:layout_editor_absoluteX="42dp"
        android:text="@string/yedi"
        android:layout_alignStart="@+id/button11"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignBaseline="@+id/button9"
        android:id="@+id/button8"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="245dp"
        tools:layout_editor_absoluteX="148dp"
        android:text="@string/sekiz"
        android:layout_alignStart="@+id/button12"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignBaseline="@+id/button10"
        android:id="@+id/button9"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="245dp"
        tools:layout_editor_absoluteX="252dp"
        android:text="@string/dokuz"
        android:layout_alignStart="@+id/button13"
        android:id="@+id/button10"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/button13"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="303dp"
        tools:layout_editor_absoluteX="42dp"
        android:text="@string/arti"
        android:layout_alignStart="@+id/button14"
        android:layout_alignBottom="@+id/button12"
        android:layout_alignBaseline="@+id/button12"
        android:id="@+id/button11"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="303dp"
        tools:layout_editor_absoluteX="148dp"
        android:text="@string/sifir"
        android:id="@+id/button12"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/button13"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="303dp"
        tools:layout_editor_absoluteX="252dp"
        android:text="@string/eksi"
        android:layout_alignStart="@+id/button15"
        android:id="@+id/button13"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/button15"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="364dp"
        tools:layout_editor_absoluteX="42dp"
        android:text="@string/carpi"
        android:layout_alignBottom="@+id/button"
        android:layout_alignBaseline="@+id/button"
        android:id="@+id/button14"
        tools:ignore="RelativeOverlap"
        android:layout_toStartOf="@+id/button"
        android:layout_marginEnd="9dp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="364dp"
        tools:layout_editor_absoluteX="148dp"
        android:text="@string/bolu"
        android:layout_alignBottom="@+id/button"
        android:layout_alignBaseline="@+id/button"
        android:id="@+id/button15"
        android:layout_toEndOf="@+id/button"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Hesapla"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="364dp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="430dp"
        tools:layout_editor_absoluteX="148dp"
        android:text="@string/sil"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button16"
        android:layout_alignStart="@+id/button2"
        android:text="@string/factoriyel" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button16"
        android:layout_alignStart="@+id/button4"
        android:text="@string/Usalma" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button16"
        android:layout_centerHorizontal="true"
        android:text="@string/Mod" />

</RelativeLayout>